@@ -1,0 +1,15 @@
+/*
+ * $Id$
+ */
+
+.recipe_ingredient_list {
+  font-weight: bold;
+  float: left;
+  width: 40%;
+}
+
+.recipe_ingredient_nodes {
+  font-weight: bold;
+  float: left;
+  width: 58%;
+}
