@@ -1,4 +1,7 @@
 2010-02-23 jvandervort
+  * added ingredient index page.
+
+2010-02-23 jvandervort
   * reworked recipe index page.
   * removed unused themes in the registry.
   * added source to recipeML bulk import.
